--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "server": "nodemon index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   }
 }
